<resources>

    <string name="app_name">urecipe</string>
    <string name="action_dump_subs">List Active Subscriptions</string>
    <string name="action_cancel_subs">Cancel subscriptions</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_food_diary">Food Diary</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_user">User</string>
    <string name="title_activity_food_diary">FoodDiary</string>
    <string name="title_user">User</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">user_name</string>
    <string name="user_gender">user_gender</string>
    <string name="user_age">user_age</string>
    <string name="user_height">user_height</string>
    <string name="user_weight">user_weight</string>
    <string name="user_edit">EDIT</string>
    <string name="title_activity_edit_personal_model">edit_personal_model</string>
    <string name="save_edit">SAVE</string>
    <string name="user_bmi">user_bmi</string>

    <string-array name="type_of_meal">
        <item>breakfast</item>
        <item>lunch</item>
        <item>dinner</item>
    </string-array>

</resources>
